# wordpack

./: README.md  pyproject.toml  requirements.txt
src/wordpack/: __init__.py  core.py
tests/: __init__.py  test_wordpack.py
